semestre_1/ANALYSE/TD10/instr-tpc.output
Grammaire

    0 $accept: SuiteInstr $end

    1 SuiteInstr: SuiteInstr Instr
    2           | %empty

    3 Instr: LValue '=' Exp ';'
    4      | READE '(' IDENT ')' ';'
    5      | READC '(' IDENT ')' ';'
    6      | PRINT '(' Exp ')' ';'
    7      | IF '(' Exp ')' Instr
    8      | WHILE '(' Exp ')' Instr
    9      | IDENT '(' Arguments ')' ';'
   10      | RETURN Exp ';'
   11      | RETURN ';'
   12      | '{' SuiteInstr '}'
   13      | ';'

   14 Exp: Exp OR TB
   15    | TB

   16 TB: TB AND FB
   17   | FB

   18 FB: FB EQ M
   19   | M

   20 M: M ORDER E
   21  | E

   22 E: E ADDSUB T
   23  | T

   24 T: T DIVSTAR F
   25  | F

   26 F: ADDSUB F
   27  | '!' F
   28  | '(' Exp ')'
   29  | NUM
   30  | CHARACTER
   31  | LValue
   32  | IDENT '(' Arguments ')'

   33 LValue: IDENT

   34 Arguments: ListExp
   35          | %empty

   36 ListExp: ListExp ',' Exp
   37        | Exp


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' (33) 27
    '(' (40) 4 5 6 7 8 9 28 32
    ')' (41) 4 5 6 7 8 9 28 32
    ',' (44) 36
    ';' (59) 3 4 5 6 9 10 11 13
    '=' (61) 3
    '{' (123) 12
    '}' (125) 12
    error (256)
    CHARACTER <byte> (258) 30
    ADDSUB <byte> (259) 22 26
    DIVSTAR <byte> (260) 24
    NUM <num> (261) 29
    IDENT <ident> (262) 4 5 9 32 33
    ORDER <comp> (263) 20
    EQ <comp> (264) 18
    OR (265) 14
    AND (266) 16
    RETURN (267) 10 11
    WHILE (268) 8
    IF (269) 7
    PRINT (270) 6
    READE (271) 4
    READC (272) 5


Non-terminaux, suivis des règles où ils apparaissent

    $accept (26)
        à gauche: 0
    SuiteInstr (27)
        à gauche: 1 2
        à droite: 0 1 12
    Instr (28)
        à gauche: 3 4 5 6 7 8 9 10 11 12 13
        à droite: 1 7 8
    Exp (29)
        à gauche: 14 15
        à droite: 3 6 7 8 10 14 28 36 37
    TB (30)
        à gauche: 16 17
        à droite: 14 15 16
    FB (31)
        à gauche: 18 19
        à droite: 16 17 18
    M (32)
        à gauche: 20 21
        à droite: 18 19 20
    E (33)
        à gauche: 22 23
        à droite: 20 21 22
    T (34)
        à gauche: 24 25
        à droite: 22 23 24
    F (35)
        à gauche: 26 27 28 29 30 31 32
        à droite: 24 25 26 27
    LValue (36)
        à gauche: 33
        à droite: 3 31
    Arguments (37)
        à gauche: 34 35
        à droite: 9 32
    ListExp (38)
        à gauche: 36 37
        à droite: 34 36


État 0

    0 $accept: . SuiteInstr $end
    1 SuiteInstr: . SuiteInstr Instr
    2           | . %empty

    $défaut  réduction par utilisation de la règle 2 (SuiteInstr)

    SuiteInstr  aller à l'état 1


État 1

    0 $accept: SuiteInstr . $end
    1 SuiteInstr: SuiteInstr . Instr
    3 Instr: . LValue '=' Exp ';'
    4      | . READE '(' IDENT ')' ';'
    5      | . READC '(' IDENT ')' ';'
    6      | . PRINT '(' Exp ')' ';'
    7      | . IF '(' Exp ')' Instr
    8      | . WHILE '(' Exp ')' Instr
    9      | . IDENT '(' Arguments ')' ';'
   10      | . RETURN Exp ';'
   11      | . RETURN ';'
   12      | . '{' SuiteInstr '}'
   13      | . ';'
   33 LValue: . IDENT

    $end    décalage et aller à l'état 2
    IDENT   décalage et aller à l'état 3
    RETURN  décalage et aller à l'état 4
    WHILE   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    PRINT   décalage et aller à l'état 7
    READE   décalage et aller à l'état 8
    READC   décalage et aller à l'état 9
    ';'     décalage et aller à l'état 10
    '{'     décalage et aller à l'état 11

    Instr   aller à l'état 12
    LValue  aller à l'état 13


État 2

    0 $accept: SuiteInstr $end .

    $défaut  accepter


État 3

    9 Instr: IDENT . '(' Arguments ')' ';'
   33 LValue: IDENT .  ['=']

    '('  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 33 (LValue)


État 4

   10 Instr: RETURN . Exp ';'
   11      | RETURN . ';'
   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    ';'        décalage et aller à l'état 19
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    Exp     aller à l'état 22
    TB      aller à l'état 23
    FB      aller à l'état 24
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 5

    8 Instr: WHILE . '(' Exp ')' Instr

    '('  décalage et aller à l'état 30


État 6

    7 Instr: IF . '(' Exp ')' Instr

    '('  décalage et aller à l'état 31


État 7

    6 Instr: PRINT . '(' Exp ')' ';'

    '('  décalage et aller à l'état 32


État 8

    4 Instr: READE . '(' IDENT ')' ';'

    '('  décalage et aller à l'état 33


État 9

    5 Instr: READC . '(' IDENT ')' ';'

    '('  décalage et aller à l'état 34


État 10

   13 Instr: ';' .

    $défaut  réduction par utilisation de la règle 13 (Instr)


État 11

    1 SuiteInstr: . SuiteInstr Instr
    2           | . %empty
   12 Instr: '{' . SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 2 (SuiteInstr)

    SuiteInstr  aller à l'état 35


État 12

    1 SuiteInstr: SuiteInstr Instr .

    $défaut  réduction par utilisation de la règle 1 (SuiteInstr)


État 13

    3 Instr: LValue . '=' Exp ';'

    '='  décalage et aller à l'état 36


État 14

    9 Instr: IDENT '(' . Arguments ')' ';'
   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT
   34 Arguments: . ListExp
   35          | . %empty  [')']
   36 ListExp: . ListExp ',' Exp
   37        | . Exp

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 35 (Arguments)

    Exp        aller à l'état 37
    TB         aller à l'état 23
    FB         aller à l'état 24
    M          aller à l'état 25
    E          aller à l'état 26
    T          aller à l'état 27
    F          aller à l'état 28
    LValue     aller à l'état 29
    Arguments  aller à l'état 38
    ListExp    aller à l'état 39


État 15

   30 F: CHARACTER .

    $défaut  réduction par utilisation de la règle 30 (F)


État 16

   26 F: . ADDSUB F
   26  | ADDSUB . F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    F       aller à l'état 40
    LValue  aller à l'état 29


État 17

   29 F: NUM .

    $défaut  réduction par utilisation de la règle 29 (F)


État 18

   32 F: IDENT . '(' Arguments ')'
   33 LValue: IDENT .  [ADDSUB, DIVSTAR, ORDER, EQ, OR, AND, ';', ')', ',']

    '('  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 33 (LValue)


État 19

   11 Instr: RETURN ';' .

    $défaut  réduction par utilisation de la règle 11 (Instr)


État 20

   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   28  | '(' . Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    Exp     aller à l'état 42
    TB      aller à l'état 23
    FB      aller à l'état 24
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 21

   26 F: . ADDSUB F
   27  | . '!' F
   27  | '!' . F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    F       aller à l'état 43
    LValue  aller à l'état 29


État 22

   10 Instr: RETURN Exp . ';'
   14 Exp: Exp . OR TB

    OR   décalage et aller à l'état 44
    ';'  décalage et aller à l'état 45


État 23

   15 Exp: TB .  [OR, ';', ')', ',']
   16 TB: TB . AND FB

    AND  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 15 (Exp)


État 24

   17 TB: FB .  [OR, AND, ';', ')', ',']
   18 FB: FB . EQ M

    EQ  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 17 (TB)


État 25

   19 FB: M .  [EQ, OR, AND, ';', ')', ',']
   20 M: M . ORDER E

    ORDER  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 19 (FB)


État 26

   21 M: E .  [ORDER, EQ, OR, AND, ';', ')', ',']
   22 E: E . ADDSUB T

    ADDSUB  décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 21 (M)


État 27

   23 E: T .  [ADDSUB, ORDER, EQ, OR, AND, ';', ')', ',']
   24 T: T . DIVSTAR F

    DIVSTAR  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 23 (E)


État 28

   25 T: F .

    $défaut  réduction par utilisation de la règle 25 (T)


État 29

   31 F: LValue .

    $défaut  réduction par utilisation de la règle 31 (F)


État 30

    8 Instr: WHILE '(' . Exp ')' Instr
   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    Exp     aller à l'état 51
    TB      aller à l'état 23
    FB      aller à l'état 24
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 31

    7 Instr: IF '(' . Exp ')' Instr
   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    Exp     aller à l'état 52
    TB      aller à l'état 23
    FB      aller à l'état 24
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 32

    6 Instr: PRINT '(' . Exp ')' ';'
   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    Exp     aller à l'état 53
    TB      aller à l'état 23
    FB      aller à l'état 24
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 33

    4 Instr: READE '(' . IDENT ')' ';'

    IDENT  décalage et aller à l'état 54


État 34

    5 Instr: READC '(' . IDENT ')' ';'

    IDENT  décalage et aller à l'état 55


État 35

    1 SuiteInstr: SuiteInstr . Instr
    3 Instr: . LValue '=' Exp ';'
    4      | . READE '(' IDENT ')' ';'
    5      | . READC '(' IDENT ')' ';'
    6      | . PRINT '(' Exp ')' ';'
    7      | . IF '(' Exp ')' Instr
    8      | . WHILE '(' Exp ')' Instr
    9      | . IDENT '(' Arguments ')' ';'
   10      | . RETURN Exp ';'
   11      | . RETURN ';'
   12      | . '{' SuiteInstr '}'
   12      | '{' SuiteInstr . '}'
   13      | . ';'
   33 LValue: . IDENT

    IDENT   décalage et aller à l'état 3
    RETURN  décalage et aller à l'état 4
    WHILE   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    PRINT   décalage et aller à l'état 7
    READE   décalage et aller à l'état 8
    READC   décalage et aller à l'état 9
    ';'     décalage et aller à l'état 10
    '{'     décalage et aller à l'état 11
    '}'     décalage et aller à l'état 56

    Instr   aller à l'état 12
    LValue  aller à l'état 13


État 36

    3 Instr: LValue '=' . Exp ';'
   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    Exp     aller à l'état 57
    TB      aller à l'état 23
    FB      aller à l'état 24
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 37

   14 Exp: Exp . OR TB
   37 ListExp: Exp .  [')', ',']

    OR  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 37 (ListExp)


État 38

    9 Instr: IDENT '(' Arguments . ')' ';'

    ')'  décalage et aller à l'état 58


État 39

   34 Arguments: ListExp .  [')']
   36 ListExp: ListExp . ',' Exp

    ','  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 34 (Arguments)


État 40

   26 F: ADDSUB F .

    $défaut  réduction par utilisation de la règle 26 (F)


État 41

   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   32  | IDENT '(' . Arguments ')'
   33 LValue: . IDENT
   34 Arguments: . ListExp
   35          | . %empty  [')']
   36 ListExp: . ListExp ',' Exp
   37        | . Exp

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 35 (Arguments)

    Exp        aller à l'état 37
    TB         aller à l'état 23
    FB         aller à l'état 24
    M          aller à l'état 25
    E          aller à l'état 26
    T          aller à l'état 27
    F          aller à l'état 28
    LValue     aller à l'état 29
    Arguments  aller à l'état 60
    ListExp    aller à l'état 39


État 42

   14 Exp: Exp . OR TB
   28 F: '(' Exp . ')'

    OR   décalage et aller à l'état 44
    ')'  décalage et aller à l'état 61


État 43

   27 F: '!' F .

    $défaut  réduction par utilisation de la règle 27 (F)


État 44

   14 Exp: Exp OR . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    TB      aller à l'état 62
    FB      aller à l'état 24
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 45

   10 Instr: RETURN Exp ';' .

    $défaut  réduction par utilisation de la règle 10 (Instr)


État 46

   16 TB: TB AND . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    FB      aller à l'état 63
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 47

   18 FB: FB EQ . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    M       aller à l'état 64
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 48

   20 M: M ORDER . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    E       aller à l'état 65
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 49

   22 E: E ADDSUB . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    T       aller à l'état 66
    F       aller à l'état 28
    LValue  aller à l'état 29


État 50

   24 T: T DIVSTAR . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    F       aller à l'état 67
    LValue  aller à l'état 29


État 51

    8 Instr: WHILE '(' Exp . ')' Instr
   14 Exp: Exp . OR TB

    OR   décalage et aller à l'état 44
    ')'  décalage et aller à l'état 68


État 52

    7 Instr: IF '(' Exp . ')' Instr
   14 Exp: Exp . OR TB

    OR   décalage et aller à l'état 44
    ')'  décalage et aller à l'état 69


État 53

    6 Instr: PRINT '(' Exp . ')' ';'
   14 Exp: Exp . OR TB

    OR   décalage et aller à l'état 44
    ')'  décalage et aller à l'état 70


État 54

    4 Instr: READE '(' IDENT . ')' ';'

    ')'  décalage et aller à l'état 71


État 55

    5 Instr: READC '(' IDENT . ')' ';'

    ')'  décalage et aller à l'état 72


État 56

   12 Instr: '{' SuiteInstr '}' .

    $défaut  réduction par utilisation de la règle 12 (Instr)


État 57

    3 Instr: LValue '=' Exp . ';'
   14 Exp: Exp . OR TB

    OR   décalage et aller à l'état 44
    ';'  décalage et aller à l'état 73


État 58

    9 Instr: IDENT '(' Arguments ')' . ';'

    ';'  décalage et aller à l'état 74


État 59

   14 Exp: . Exp OR TB
   15    | . TB
   16 TB: . TB AND FB
   17   | . FB
   18 FB: . FB EQ M
   19   | . M
   20 M: . M ORDER E
   21  | . E
   22 E: . E ADDSUB T
   23  | . T
   24 T: . T DIVSTAR F
   25  | . F
   26 F: . ADDSUB F
   27  | . '!' F
   28  | . '(' Exp ')'
   29  | . NUM
   30  | . CHARACTER
   31  | . LValue
   32  | . IDENT '(' Arguments ')'
   33 LValue: . IDENT
   36 ListExp: ListExp ',' . Exp

    CHARACTER  décalage et aller à l'état 15
    ADDSUB     décalage et aller à l'état 16
    NUM        décalage et aller à l'état 17
    IDENT      décalage et aller à l'état 18
    '('        décalage et aller à l'état 20
    '!'        décalage et aller à l'état 21

    Exp     aller à l'état 75
    TB      aller à l'état 23
    FB      aller à l'état 24
    M       aller à l'état 25
    E       aller à l'état 26
    T       aller à l'état 27
    F       aller à l'état 28
    LValue  aller à l'état 29


État 60

   32 F: IDENT '(' Arguments . ')'

    ')'  décalage et aller à l'état 76


État 61

   28 F: '(' Exp ')' .

    $défaut  réduction par utilisation de la règle 28 (F)


État 62

   14 Exp: Exp OR TB .  [OR, ';', ')', ',']
   16 TB: TB . AND FB

    AND  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 14 (Exp)


État 63

   16 TB: TB AND FB .  [OR, AND, ';', ')', ',']
   18 FB: FB . EQ M

    EQ  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 16 (TB)


État 64

   18 FB: FB EQ M .  [EQ, OR, AND, ';', ')', ',']
   20 M: M . ORDER E

    ORDER  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 18 (FB)


État 65

   20 M: M ORDER E .  [ORDER, EQ, OR, AND, ';', ')', ',']
   22 E: E . ADDSUB T

    ADDSUB  décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 20 (M)


État 66

   22 E: E ADDSUB T .  [ADDSUB, ORDER, EQ, OR, AND, ';', ')', ',']
   24 T: T . DIVSTAR F

    DIVSTAR  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 22 (E)


État 67

   24 T: T DIVSTAR F .

    $défaut  réduction par utilisation de la règle 24 (T)


État 68

    3 Instr: . LValue '=' Exp ';'
    4      | . READE '(' IDENT ')' ';'
    5      | . READC '(' IDENT ')' ';'
    6      | . PRINT '(' Exp ')' ';'
    7      | . IF '(' Exp ')' Instr
    8      | . WHILE '(' Exp ')' Instr
    8      | WHILE '(' Exp ')' . Instr
    9      | . IDENT '(' Arguments ')' ';'
   10      | . RETURN Exp ';'
   11      | . RETURN ';'
   12      | . '{' SuiteInstr '}'
   13      | . ';'
   33 LValue: . IDENT

    IDENT   décalage et aller à l'état 3
    RETURN  décalage et aller à l'état 4
    WHILE   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    PRINT   décalage et aller à l'état 7
    READE   décalage et aller à l'état 8
    READC   décalage et aller à l'état 9
    ';'     décalage et aller à l'état 10
    '{'     décalage et aller à l'état 11

    Instr   aller à l'état 77
    LValue  aller à l'état 13


État 69

    3 Instr: . LValue '=' Exp ';'
    4      | . READE '(' IDENT ')' ';'
    5      | . READC '(' IDENT ')' ';'
    6      | . PRINT '(' Exp ')' ';'
    7      | . IF '(' Exp ')' Instr
    7      | IF '(' Exp ')' . Instr
    8      | . WHILE '(' Exp ')' Instr
    9      | . IDENT '(' Arguments ')' ';'
   10      | . RETURN Exp ';'
   11      | . RETURN ';'
   12      | . '{' SuiteInstr '}'
   13      | . ';'
   33 LValue: . IDENT

    IDENT   décalage et aller à l'état 3
    RETURN  décalage et aller à l'état 4
    WHILE   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    PRINT   décalage et aller à l'état 7
    READE   décalage et aller à l'état 8
    READC   décalage et aller à l'état 9
    ';'     décalage et aller à l'état 10
    '{'     décalage et aller à l'état 11

    Instr   aller à l'état 78
    LValue  aller à l'état 13


État 70

    6 Instr: PRINT '(' Exp ')' . ';'

    ';'  décalage et aller à l'état 79


État 71

    4 Instr: READE '(' IDENT ')' . ';'

    ';'  décalage et aller à l'état 80


État 72

    5 Instr: READC '(' IDENT ')' . ';'

    ';'  décalage et aller à l'état 81


État 73

    3 Instr: LValue '=' Exp ';' .

    $défaut  réduction par utilisation de la règle 3 (Instr)


État 74

    9 Instr: IDENT '(' Arguments ')' ';' .

    $défaut  réduction par utilisation de la règle 9 (Instr)


État 75

   14 Exp: Exp . OR TB
   36 ListExp: ListExp ',' Exp .  [')', ',']

    OR  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 36 (ListExp)


État 76

   32 F: IDENT '(' Arguments ')' .

    $défaut  réduction par utilisation de la règle 32 (F)


État 77

    8 Instr: WHILE '(' Exp ')' Instr .

    $défaut  réduction par utilisation de la règle 8 (Instr)


État 78

    7 Instr: IF '(' Exp ')' Instr .

    $défaut  réduction par utilisation de la règle 7 (Instr)


État 79

    6 Instr: PRINT '(' Exp ')' ';' .

    $défaut  réduction par utilisation de la règle 6 (Instr)


État 80

    4 Instr: READE '(' IDENT ')' ';' .

    $défaut  réduction par utilisation de la règle 4 (Instr)


État 81

    5 Instr: READC '(' IDENT ')' ';' .

    $défaut  réduction par utilisation de la règle 5 (Instr)
